JAVAIS-14: Overflow resolved

--- a/src/main/webapp/resources/style/detailViewStyle.css
+++ b/src/main/webapp/resources/style/detailViewStyle.css
@@ -1,5 +1,8 @@
-html, body { height: 100%; width: 100%; margin: 0;
-	overflow: hidden; }
+html, body {
+	height: 100%;
+	width: 100%;
+	margin: 0;
+}
 
 .header{
 	background-image: linear-gradient(to top , rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0.5));
